--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- INDEX.HTML -->
 <!DOCTYPE html>
 <html lang="vi">
 
@@ -6,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh LEEEEEEEE</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -31,8 +31,11 @@
             <button onclick="toggleLoop()" class="loop-button">🔁</button>
             <button onclick="playRandomSong()" class="random-button">🔀</button>
             <button onclick="nextSong()" class="more-play-button">⏭️</button>
+        </div>
 
-
+        <!-- Progress Bar -->
+        <div class="progress-container">
+            <input type="range" id="progressBar" value="0" min="0" max="100">
         </div>
 
         <p>Tôi bị bùi và gầy.</p>
