--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh LEEEEEEEE</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="image/anh.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -14,15 +15,15 @@
     <script src="script.js"></script>
     <div class="container">
 
-        <h1>YO, tôi là Phạm Ngọc Danh 😄</h1>
+        <h1>YO👌, tôi là Phạm Ngọc Danh 😄</h1>
+        <h2>o(〃＾▽＾〃)o</h2>
         <div class="social-icons">
             <a href="https://www.facebook.com/danhleeee" target="_blank"><img src="image/facebook.png" /></a>
             <a href="https://youtube.com/@danhleeee" target="_blank"><img src="image/youtube.png" /></a>
             <a href="https://tiktok.com/@danhleeee" target="_blank"><img src="image/tiktok.png" /></a>
-            <a href="https://tiktok.com/@danhleeee" target="_blank"><img src="image/tiktok.png" /></a>
             <a href="https://discord.gg/danhleeee" target="_blank"><img src="image/discord.png" /></a>
             <a href="https://m.me/j/danhleeee/" target="_blank"><img src="image/messenger.png" /></a>
-            <a href="https://github.com/harytien107" target="_blank"><img src="image/github.png" /></a>
+            <a href="https://github.com/harrytien107" target="_blank"><img src="image/github.png" /></a>
         </div>
 
         <div class="controls">
@@ -32,12 +33,6 @@
             <button onclick="playRandomSong()" class="random-button">🔀</button>
             <button onclick="nextSong()" class="more-play-button">⏭️</button>
         </div>
-
-        <!-- Progress Bar -->
-        <div class="progress-container">
-            <input type="range" id="progressBar" value="0" min="0" max="100">
-        </div>
-
         <p>Tôi bị bùi và gầy.</p>
     </div>
 </body>
