--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h2>o(〃＾▽＾〃)o</h2>
         <div class="social-icons">
             <a href="https://www.facebook.com/danhleeee" target="_blank"><img src="image/facebook.png" /></a>
-            <a href="https://youtube.com/@danhleeee" target="_blank"><img src="image/youtube.png" /></a>
-            <a href="https://tiktok.com/@danhleeee" target="_blank"><img src="image/tiktok.png" /></a>
+            <a href="https://youtube.com/@danhpham1906" target="_blank"><img src="image/youtube.png" /></a>
+            <a href="https://tiktok.com/@phamdanh1906" target="_blank"><img src="image/tiktok.png" /></a>
             <a href="https://discord.gg/danhleeee" target="_blank"><img src="image/discord.png" /></a>
             <a href="https://m.me/j/danhleeee/" target="_blank"><img src="image/messenger.png" /></a>
             <a href="https://github.com/harrytien107" target="_blank"><img src="image/github.png" /></a>
